--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -1,5 +1,5 @@
 .background-image-container {
-    height: 700px;
+    height: 90vh;
     width: 100%;
     background-size: cover;
     background-image: url('./assets/hualien4.jpg');
@@ -17,13 +17,38 @@
     flex-wrap: wrap;
     width: 80%;
     margin: 1rem auto;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .intro-container {
-    width: 40%;
+    width: 500px;
+    margin: 1rem;
 }
 
 .links-container {
-    width: 40%;
+    width: 500px;
+    margin: 1rem;
+}
+
+.fa {
+    text-decoration: none;
+    color: black;
+}
+
+.social-icon {
+    font-size: 3rem;
+    margin: 0.5rem 1rem;
+}
+
+.email-container a {
+    display: inline-flex;
+    align-items: center;
+    text-decoration: none;
+    color: black;
+    font-size: 2rem;
+}
+
+.email-icon {
+    margin: 0.5rem 1rem;
+    font-size: 2.5rem;
 }
