--- a/portfolio/src/components/Navbar/Navbar.css
+++ b/portfolio/src/components/Navbar/Navbar.css
@@ -22,3 +22,11 @@
     font-size: 1.5rem;
     margin: 0 1rem;
 }
+
+.nav-link {
+    text-decoration: none;
+    color: white;
+}
+.nav-icon {
+    color: white;
+}
