--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -1,13 +1,45 @@
 .background-image-container {
-    height: 90vh;
+    height: 100vh;
     width: 100%;
     background-size: cover;
-    background-image: url('./assets/hualien4.jpg');
+    background-position: center;
     
     /* Make this container the positioning context */
     position: relative;
-    /* This will be below the navbar */
     z-index: 1;
+    
+    /* Add a pseudo-element for the overlay */
+    &::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        background-image: url('./assets/hualien4.jpg');
+        background-size: cover;
+        background-position: center;
+        opacity: 0.8;
+        z-index: -1;
+    }
+}
+
+.title-container {
+    color: black;
+    width: 700px;
+    height: 200px;
+
+    position: absolute;
+    top: 12.5%;
+    right: 5%;
+}
+
+#title {
+    font-size: 3.5rem;
+}
+
+#title:last-of-type {
+    animation: type 0.33s infinite;
 }
 
 .main-container {
