--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -16,7 +16,7 @@
         left: 0;
         height: 100%;
         width: 100%;
-        background-image: url('./assets/hualien4.jpg');
+        background-image: url('./assets/photo/hualien4.jpg');
         background-size: cover;
         background-position: center;
         opacity: 0.8;
@@ -25,7 +25,6 @@
 }
 
 .title-container {
-    color: black;
     width: 700px;
     height: 200px;
 
@@ -52,8 +51,29 @@
     justify-content: space-around;
 }
 
-.fa {
-    text-decoration: none;
-    color: black;
+#img-container {
+    margin: 1.25rem 0;
 }
 
+#myPhoto {
+    width: 550px;
+    background-position: center;
+}
+
+.fa {
+    text-decoration: none;
+    color: white;
+}
+
+.main-container-title {
+    font-size:2.5rem;
+}
+
+footer {
+    width: 100%;
+    background-color: rgba(13, 64, 101, 0.796);
+}
+
+#main-links {
+    margin: 0 auto;
+}
