--- a/portfolio/src/components/Intro/Intro.css
+++ b/portfolio/src/components/Intro/Intro.css
@@ -1,4 +1,16 @@
 .intro-container {
-    width: 500px;
+    width: 550px;
     margin: 1rem;
+}
+
+.intro-content {
+    font-size: 1.5rem;
+}
+
+#intro-list-title {
+    font-size: 2rem;
+}
+
+.intro-list {
+    margin: 0.5rem 0;
 }
