--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -46,7 +46,7 @@
     z-index: 1;   
     width: 90%;
     margin: 1rem auto;
-    min-height: 100vh;
+    /* min-height: 100vh; */
 }
 
 .fa {
@@ -56,6 +56,7 @@
 
 .main-container-title {
     font-size:2.5rem;
+    margin-bottom: 0.5rem;
 }
 
 footer {
