--- a/portfolio/src/components/Card/Card.css
+++ b/portfolio/src/components/Card/Card.css
@@ -14,6 +14,7 @@
     width: 550px;
     display: flex;
     justify-content: center;
+    align-items: center;
     margin: 1rem 0;
 }
 
@@ -35,11 +36,12 @@
 }
 
 .card-list {
-    padding: 0;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 .card-list-item {
-    list-style-type: none;
+    /* list-style-type: none; */
     font-size: 1.25rem;
     color: rgb(74, 74, 74);
     margin: 1rem 0;
