--- a/portfolio/src/components/Card/Card.css
+++ b/portfolio/src/components/Card/Card.css
@@ -47,12 +47,54 @@
     margin: 1rem 0;
 }
 
-@media only screen and (max-width: 1240px) {
+@media only screen and (max-width: 1240px) {    
+    .card-container {
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin: 2.5rem auto;
+    }
+    
+    .card-container:hover {
+        box-shadow: 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
+    }
+    
+    .card-img-container {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 1rem 0;
+    }
+    
+    .card-img {
+        width: 200px;
+        height: 200px;
+        background-position: center;
+    }
+    
+    .card-intro-container {
+        width: 80%;
+        margin: 1rem 0;
+    }
+    
     .card-title {
+        font-size: 1.25rem;
+        width: 100%;
+        margin-bottom: 0;
+        text-align: center;
+    }
+    
+    .card-list {
         text-align: center;
     }
     
     .card-list-item {
+        /* list-style-type: none; */
+        font-size: 1rem;
+        color: rgb(74, 74, 74);
+        margin: 1rem 0;
         text-align: center;
     }
 }
