--- a/portfolio/src/pages/Intro/Intro.css
+++ b/portfolio/src/pages/Intro/Intro.css
@@ -36,3 +36,44 @@
     background-position: center;
     padding-top: 3rem;
 }
+
+@media only screen and (max-width: 500px) {
+    .intro-container {
+        width: 100%;
+        margin: 0;
+    
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap;
+    }
+    
+    .intro-text-container {
+        width: 600px;
+    }
+    
+    .intro-content {
+        font-size: 1rem;
+        color: rgb(74,74,74);
+        line-height: 2rem;
+        letter-spacing: 0.8px;
+    }
+    
+    #intro-list-title {
+        font-size: 1.25rem;
+    }
+    
+    .intro-list {
+        margin: 0.5rem 0;
+    }
+    
+    #img-container {
+        width: 100%;
+        margin: 0;
+    }
+    
+    #myPhoto {
+        width: 100%;
+        background-position: center;
+        padding-top: 1rem;
+    }
+}
