--- a/portfolio/src/pages/Resume/Resume.css
+++ b/portfolio/src/pages/Resume/Resume.css
@@ -12,3 +12,21 @@
     font-size: 2.5rem;
     margin: 1.75rem;
 }
+
+@media only screen and (max-width: 500px) {
+    .page-title {
+        text-align: center;
+        font-size: 2.5rem;
+        margin: 0 auto;
+    }
+    
+    .sec-container {
+        width: 100%;
+        margin: 1rem, auto;
+    }
+    
+    .sec-title {
+        font-size: 1.75rem;
+        text-align: center;
+    }
+}
